# nomad-parser-molpro-plugin

./: .gitignore  README.md  nomad_plugin.yaml  parser.py  pyproject.toml
molproparser/: __init__.py  parser.py  xml_parser.py
